--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-
-    <h1>Oliver Leiriao</h1>
-
-    <p>This is my page</p>
-
-</body>
-
-</html>
+---
+layout: default
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
