--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Profile</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
@@ -10,10 +10,12 @@
   </head>
   <body>
     <h1 class="animated-title">Oliver Leiriao</h1>
-    <nav class="navbar">
+    <nav class="navbar other-page-navbar">
       <a href="./index.html">HOME</a>
-      <a href="./profile.html">PROFILE</a>
+      <a href="/#">PROFILE</a>
       <a href="#">PHOTOGRAPHY</a>
     </nav>
+    <h2>About me.</h2>
+    <p>There will be a profile here.</p>
   </body>
 </html>
