Fixed home page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
-    <h1 class="animated-title">Oliver Leiriao</h1>
+    <header>
+      <h1 class="title">OLIVER LEIRIAO</h1>
+    </header>
+    
     <nav class="navbar">
       <a href="./index.html">HOME</a>
       <a href="./profile.html">PROFILE</a>
-      <a href="#">PHOTOGRAPHY</a>
+      <a href="./photos.html">PHOTOGRAPHY</a>
     </nav>
+
+    <div class="image-container">
+      <img src="Art&Img/20240506_033910522_iOS.jpg" alt="Main Image" class="main-image">
+    </div>
+    <p><br>"Integrated Circuit" (2022)<br><br>
+      This piece, by artist Hiraoki Kamei, was on display at the Tokyo Metropolitan Museum of Art when I visited in April 2024.<br> 
+      The piece combines an impressive array of materials, including a actual CPU, solder, metallic acrylics, and layered wood sheets.<br> 
+      I enjoy how the piece engages with the ideas of abstraction, and of infinite possibility within the limits of finite computational capacity.<br></p>
   </body>
 </html>
