--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Profile</title>
+    <title>Photos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
@@ -15,7 +15,12 @@
       <a href="./profile.html">PROFILE</a>
       <a href="./photos.html">PHOTOGRAPHY</a>
     </nav>
-    <h2>About me.</h2>
-    <p>There will be a profile here.</p>
+    
+    <div class="gallery">
+      <img id="galleryImage" src="image1.jpg" alt="Gallery Image">
+      <button id="prevButton">Previous</button>
+      <button id="nextButton">Next</button>
+    </div>
+
   </body>
 </html>
