Huge fixes to most pages, added tons of content and images.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Oliver Leiriao</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
@@ -18,14 +18,16 @@
       <a href="./index.html">HOME</a>
       <a href="./profile.html">PROFILE</a>
       <a href="./photos.html">PHOTOGRAPHY</a>
+      <a href="./art.html">ART</a>
     </nav>
 
     <div class="image-container">
-      <img src="Art&Img/20240506_033910522_iOS.jpg" alt="Main Image" class="main-image">
+      <img src="Art&Img\IntegratedCircuit_HiraokiKamei(2022).jpg" alt="Main Image" class="main-image">
     </div>
-    <p><br>"Integrated Circuit" (2022)<br><br>
-      This piece, by artist Hiraoki Kamei, was on display at the Tokyo Metropolitan Museum of Art when I visited in April 2024.<br> 
-      The piece combines an impressive array of materials, including a actual CPU, solder, metallic acrylics, and layered wood sheets.<br> 
+    <p class="home-image-description"><br>"Integrated Circuit" (2022)<br><br>
+      This piece, by artist Hiraoki Kamei, was on display at the Tokyo Metropolitan Art Museum when I visited in April 2024 (photographed by myself).<br> 
+      The piece combines an impressive array of materials, including a CPU, solder & metallic acrylics on layered wood pannels.<br> 
       I enjoy how the piece engages with the ideas of abstraction, and of infinite possibility within the limits of finite computational capacity.<br></p>
   </body>
+
 </html>
