fixed bottom of index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
       This piece, by artist Hiraoki Kamei, was on display at the Tokyo Metropolitan Art Museum when I visited in April 2024 (photographed by myself).<br> 
       The piece combines an impressive array of materials, including a CPU, solder & metallic acrylics on layered wood pannels.<br> 
       I enjoy how the piece engages with the ideas of abstraction, and of infinite possibility within the limits of finite computational capacity.<br></p>
-  </body>
+  </body><br>
 
 </html>
