fixed some small formatting issues and added pictures from Japan

--- a/photos.html
+++ b/photos.html
@@ -76,11 +76,30 @@
     </div>
     <div class="gallery-container">
       <img id="galleryImage" src="Art&Img/Photos/Montreal3.jpg" alt="Montreal 3">
-      <img id="galleryImage" src="Art&Img/Photos/Toronto4.jpg" alt="Toronto 4">
+      <img id="galleryImage" src="Art&Img\Photos\Toronto4.JPG" alt="Toronto 4">
+      <img id="galleryImage" src="Art&Img\Photos\Kyoto1.jpg" alt="Kyoto 1">
     </div>
-
-
-    
+    <div class="portrait-container">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo1.jpg" alt="Tokyo 1">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo2.jpg" alt="Tokyo 2">
+    </div>
+    <div class="gallery-container">
+      <img id="galleryImage" src="Art&Img\Photos\Kyoto2.jpg" alt="Kyoto 2">
+    </div>
+    <div class="portrait-container">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo3.jpg" alt="Tokyo 3">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo4.jpg" alt="Tokyo 4">
+    </div>
+    <div class="gallery-container">
+      <img id="galleryImage" src="Art&Img\Photos\Kyoto3.jpg" alt="Kyoto 3">
+    </div>
+    <div class="portrait-container">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo5.jpg" alt="Tokyo 5">
+      <img id="galleryPortraitImage" src="Art&Img/Photos/Tokyo6.jpg" alt="Tokyo 6">
+    </div>
+    <div class="gallery-container">
+      <img id="galleryImage" src="Art&Img\Photos\Tokyo7.jpg" alt="Tokyo 7">
+    </div>
 
   </body>
 </html>
