fixed a painting title error

--- a/art.html
+++ b/art.html
@@ -55,7 +55,7 @@
         <img id="galleryPortraitImage" src="Art&Img\Art\Tiles_OL(2024).jpg" alt="HH_OL">
       </div>
       <p class="art-bio">(left) <Strong>Romeo & Juliet</Strong> (2024), 16.5"x13.5", Acrylic on Mixed Media Paper.</p>
-      <p class="art-bio">(right) <Strong>Head Hunters</Strong> (2024), 24"x18", Acrylic on Canvas.</p>
+      <p class="art-bio">(right) <Strong>Tiles</Strong> (2024), 24"x18", Acrylic on Canvas.</p>
       
 
 </html>
