fixed bio text container

--- a/profile.html
+++ b/profile.html
@@ -32,8 +32,7 @@
         My name is Oliver Leiriao.<br><br>
 
         I am a cybersecurity professional, currently working as an Information Security Analyst.<br>
-        I began my career, as many do, as a SysAdmin, before stepping into IT operations monitoring & incident response for critical systems<br> 
-        such as mainframes, large scale enterprise applications, and one of the largest private fiber optic networks in the world.<br><br>
+        I began my career, as many do, as a SysAdmin, before stepping into IT operations monitoring & incident response for critical systems such as mainframes, large scale enterprise applications, and one of the largest private fiber optic networks in the world.<br><br>
       </p>
 
       <h3>Domains of Experience</h3>
