updated experience section

--- a/profile.html
+++ b/profile.html
@@ -60,10 +60,10 @@
       2024<br>
       </p>
       <ul class="experience-list">
-        <li>Perform control narrative and process reviews for over 45 ITGC SOX controls to strengthen compliance and ensure information security within the scope of IT at CN.</li>
-        <li>Designed & deployed compliance service request processes and technology, operationalizing and standardizing information requests across the department, leveraged by our team of 7 to process over 200 compliance information requests per year.</li>
-        <li>Deployed a comprehensive SOX control training program to ensure that the 70+ stakeholders involved with SOX controls are adequately knowledgeable of their responsibilities and processes and outlines the process for onboarding new performers.</li>
-        <li>Lead and deployed 18 SOX initiatives and projects that refined or automated processes, improve compliance, governance, and vitality with regards to IT & information security.</li>
+        <li>Designed & deployed a compliance ServiceNow request portal to operationalize information requests between InfoSec & other IT departments, now leveraged by our team to process over 200 compliance information requests per year.</li>
+        <li>Developed a SOX Controls Training Program framework to ensure that over 100 stakeholders involved with SOX controls at CN are adequately knowledgeable and aware of their responsibilities and processes.</li>
+        <li>Contributed to the control narrative and process reviews of 45 ITGC SOX controls to strengthen compliance and ensure information security within the scope of IT at CN.</li>
+        <li>Performer of 4 SOX Controls, collecting evidence and documenting procedures, subjected to both internal and external audit.</li>
       </ul>
 
       <p><Strong>IT Command Center Operations Analyst</Strong>, CN<br>
