Minor updates to profile page

--- a/profile.html
+++ b/profile.html
@@ -32,24 +32,22 @@
         My name is Oliver Leiriao.<br><br>
 
         I am a cybersecurity professional, currently working as an Information Security Analyst.<br>
-        I began my career, as many do, as a SysAdmin, before stepping into IT operations monitoring & incident response for critical systems such as mainframes, large scale enterprise applications, and one of the largest private fiber optic networks in the world.<br><br>
+        I began my career, as many do, as a SysAdmin, before stepping into IT operations monitoring & incident response for critical systems such as mainframes, large scale enterprise applications, terminal operating systems, and one of the largest private fiber optic networks in the world.<br><br>
       </p>
 
       <h3>Domains of Experience</h3>
       <ul class="experience-list">
         <li>Corporate Cybersecurity Governance, Risk & Compliance (GRC)</li>
-        <li>SOX Compliance & Information Technology General Controls (ITGCs)</li>
+        <li>SOX Compliance & Information Technology General Controls (ITGC)</li>
         <li>Integrated Risk Management (IRM)</li>
         <li>Information Security Policy</li>
-        <li>Security Awareness & Training</li>
-        <li>Rail Transportation IT</li>
-        <li>Incident Response</li>
+        <li>Cybersecurity Awareness & Training</li>
+        <li>Rail Transportation IT Infrastrucure</li>
+        <li>IT Operations & Incident Response</li>
         <li>Security Operations Center (SOC)</li>
-        <li>Network Security</li>
+        <li>Network Security Operations Center (NOC)</li>
         <li>Change & Release Management</li>
-        <li>Critical IT Infrastructure</li>
-        <li>Fiber Optic Networking</li>
-        <li>Terminal Operations Technology</li>
+        <li>Terminal Operating Systems</li>
       </ul>
       
       <br>
