Added Green Onyx & edited canvas sizes

--- a/art.html
+++ b/art.html
@@ -35,8 +35,8 @@
         <img id="galleryPortraitImage" src="Art&Img/Art/Love_OL(2023).jpg" alt="Love_OL">
         <img id="galleryPortraitImage" src="Art&Img\Art\HeadHunters_OL(2024).jpg" alt="HH_OL">
       </div>
-      <p class="art-bio">(left) <Strong>Love</Strong> (2023), 16.5"x13.5", Acrylic on Mixed Media Paper.</p>
-      <p class="art-bio">(right) <Strong>Head Hunters</Strong> (2024), 16.5"x13.5", Acrylic on Mixed Media Paper.</p>
+      <p class="art-bio">(left) <Strong>Love</Strong> (2023), 13.5"x16.5", Acrylic on Mixed Media Paper.</p>
+      <p class="art-bio">(right) <Strong>Head Hunters</Strong> (2024), 13.5"x16.5", Acrylic on Mixed Media Paper.</p>
 
       <div class="gallery-container">
         <img id="galleryImage" src="Art&Img\Art\Labradorite_OL(2024).jpg" alt="Labradorite_OL">
@@ -47,15 +47,20 @@
         <img id="galleryPortraitImage" src="Art&Img\Art\GaspardDeLaNuit_OL(2024).jpg" alt="GdlN_OL">
         <img id="galleryPortraitImage" src="Art&Img\Art\Amazonite_OL(2024).jpg" alt="Amazonite_OL">
       </div>
-      <p class="art-bio">(left) <Strong>Gaspard de la Nuit</Strong> (2024), 24"x18", Acrylic on Canvas.</p>
-      <p class="art-bio">(right) <Strong>Amazonite</Strong> (2024), 24"x18", Acrylic on Canvas.</p>
+      <p class="art-bio">(left) <Strong>Gaspard de la Nuit</Strong> (2024), 18"x24", Acrylic on Canvas.</p>
+      <p class="art-bio">(right) <Strong>Amazonite</Strong> (2024), 18"x24", Acrylic on Canvas.</p>
+
+      <div class="gallery-container">
+        <img id="galleryImage" src="Art&Img\Art\GreenOnyx_OL(2024).jpg" alt="GreenOnyx_OL">
+      </div>
+      <p class="art-bio"><Strong>Green Onyx</Strong> (2023), 24"x18", Acrylic on Canvas.</p><br>
 
       <div class="portrait-container">
         <img id="galleryPortraitImage" src="Art&Img\Art\RomeoAndJuliet_OL(2024).jpg" alt="RJ_OL">
         <img id="galleryPortraitImage" src="Art&Img\Art\Tiles_OL(2024).jpg" alt="HH_OL">
       </div>
-      <p class="art-bio">(left) <Strong>Romeo & Juliet</Strong> (2024), 16.5"x13.5", Acrylic on Mixed Media Paper.</p>
-      <p class="art-bio">(right) <Strong>Tiles</Strong> (2024), 24"x18", Acrylic on Canvas.</p>
+      <p class="art-bio">(left) <Strong>Romeo & Juliet</Strong> (2024), 13.5"x16.5", Acrylic on Mixed Media Paper.</p>
+      <p class="art-bio">(right) <Strong>Tiles</Strong> (2024), 18"x24", Acrylic on Canvas.</p>
       
 
 </html>
