--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Oliver Leiriao | Profile</title>
+
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font & Stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
@@ -23,7 +31,7 @@
 
     <img src="Art&Img/Profile/ProfilePicture.jpg" alt="Profile Picture" class="profile-image">
 
-    <div class="profile-container">
+    <div class="container-fluid custom-container">
 
       <h2>About me.</h2>
 
