--- a/art.html
+++ b/art.html
@@ -48,6 +48,11 @@
       <p class="art-bio">(right) <Strong>Head Hunters</Strong> (2024), 13.5"x16.5", Acrylic on Mixed Media Paper.</p>
 
       <div class="gallery-container">
+        <img id="galleryImage" src="Art&Img\Art\Nostalgia_OL(2024).jpg" alt="Nostalgia_OL">
+      </div>
+      <p class="art-bio"><Strong>Nostalgia</Strong> (2024), 40"x30", Acrylic on Canvas.</p><br>
+
+      <div class="gallery-container">
         <img id="galleryImage" src="Art&Img\Art\Labradorite_OL(2024).jpg" alt="Labradorite_OL">
       </div>
       <p class="art-bio"><Strong>Labradorite</Strong> (2024), 30"x20", Acrylic on Canvas.</p><br>
