Updated profile page

--- a/profile.html
+++ b/profile.html
@@ -39,12 +39,16 @@
         
         My name is Oliver Leiriao.<br><br>
 
-        I am a cybersecurity professional, currently working as an Information Security Analyst.<br>
+        I am a cybersecurity professional, currently working as a Cyber Threat Intelligence Analyst.<br>
         I began my career, as many do, as a SysAdmin, before stepping into IT operations monitoring & incident response for critical systems such as mainframes, large scale enterprise applications, terminal operating systems, and one of the largest private fiber optic networks in the world.<br><br>
       </p>
 
       <h3>Domains of Experience</h3>
       <ul class="experience-list">
+        <li>Network Protocol Analysis</li>
+        <li>Threat Detection & Mitigation</li>
+        <li>Technical Writing and Intelligence Synthesis</li>
+        <li>Vulnerability Management</li>
         <li>Corporate Cybersecurity Governance, Risk & Compliance (GRC)</li>
         <li>SOX Compliance & Information Technology General Controls (ITGC)</li>
         <li>Integrated Risk Management (IRM)</li>
@@ -62,8 +66,12 @@
 
       <h2>Work Experience</h2><br>
 
+      <p><Strong>Cyber Threat Intelligence Analyst</Strong>, Government of Canada<br>
+      2025<br>
+      </p>
+
       <p><Strong>Information Security Analyst</Strong>, CN<br>
-      2024<br>
+      2024-2025<br>
       </p>
       <ul class="experience-list">
         <li>Designed & deployed a compliance ServiceNow request portal to operationalize information requests between InfoSec & other IT departments, now leveraged by our team to process over 200 compliance information requests per year.</li>
